Fix Webgl texImage* reading from wrong buffer

When the source image for a texImage* call is a WebGL canvas,
it is important to read from the back buffer rather than the front
buffer. Otherwise we end up uploading stale content.  This bug only
affected specific texture formats for texImage2D.

BUG=759180

Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I56ea96c7ee512eb11525f7c968b15bc95cf70f59
Reviewed-on: https://chromium-review.googlesource.com/636349
Reviewed-by: Zhenyao Mo <zmo@chromium.org>
Commit-Queue: Justin Novosad <junov@chromium.org>
Cr-Commit-Position: refs/heads/master@{#497855}